# cross-bench

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
cross_bench/: __init__.py  cli.py  predictor.py
cross_bench/benchmarks/: __init__.py  segmentation.py  transfer.py
cross_bench/datasets/: base.py
cross_bench/visualization/: __init__.py  plotting.py
examples/: example_usage.py
examples/sample_data/: manifest.json
examples/sample_data/masks/: .gitkeep
examples/sample_data/reference/: .gitkeep
src/cross_bench/: __init__.py  cli.py  config.py  predictor.py
src/cross_bench/benchmarks/: __init__.py  base.py  detection.py  segmentation.py  transfer.py
src/cross_bench/datasets/: __init__.py  base.py  coco.py
src/cross_bench/visualization/: __init__.py  plotting.py
tests/: test_detection.py
